--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<input type="text" id="name" placeholder="Name">
+		<input type="text" id="phone" placeholder="Phone Number">
+		<input type="text" id="address" placeholder="Address">
+
+		<input type="checkbox" id="chechbox" value="Have you ever lived with a Dog before?">
+		<select id="multiSelect">
+			<option>1</option>
+			<option>2</option>
+			<option>3</option>
+		</select>
+		<button type="submit" id="submit" value="Submit">Submit
+		</button>
+			
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
