--- a/main.html
+++ b/main.html
@@ -19,9 +19,7 @@
 			<option>2</option>
 			<option>3</option>
 		</select>
-		<button type="submit" id="submit" value="Submit">Submit
-		</button>
-			
+		<input type="submit" id="submit" value="Submit">				
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
