--- a/main.html
+++ b/main.html
@@ -9,15 +9,16 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<form>
-		<input type="text" id="name" placeholder="Name">
-		<input type="text" id="phone" placeholder="Phone Number">
-		<input type="text" id="address" placeholder="Address">
+		<input type="text" id="name" placeholder="Name"/>
+		<input type="text" id="phone" placeholder="Phone Number"/>
+		<input type="text" id="address" placeholder="Address"/>
 
-		<input type="checkbox" id="chechbox" value="Have you ever lived with a Dog before?">
-		<select id="multiSelect">
+		<input type="checkbox" id="Chechbox" value="Have you ever lived with a Dog before?">
+		<select id="multiSelect" multiple>
 			<option>1</option>
 			<option>2</option>
 			<option>3</option>
+			<option>4</option>
 		</select>
 		<input type="submit" id="submit" value="Submit">				
 	</form>
