--- a/main.html
+++ b/main.html
@@ -10,16 +10,20 @@
 	<!-- the entire body must be written by student -->
 	<form>
 		<input type="text" id="name" placeholder="Name"/>
+		<br>
 		<input type="text" id="phone" placeholder="Phone Number"/>
+		<br>
 		<input type="text" id="address" placeholder="Address"/>
-
-		<input type="checkbox" id="Chechbox" value="Have you ever lived with a Dog before?">
+      <br>
+		<input type="checkbox" id="Chechbox" value="Have you ever lived with a Dog before?"/>Have you ever lived with a Dog before?
+		<br>
 		<select id="multiSelect" multiple>
 			<option>1</option>
 			<option>2</option>
 			<option>3</option>
 			<option>4</option>
 		</select>
+		<br>
 		<input type="submit" id="submit" value="Submit">				
 	</form>
     <script type="text/javascript" src="./script.js">
