--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 		<br>
 		<input type="text" id="address" placeholder="Address"/>
       <br>
-		<input type="checkbox" id="Chechbox" value="Have you ever lived with a Dog before?"/>Have you ever lived with a Dog before?
+		<input type="checkbox" id="chechbox" value="Have you ever lived with a Dog before?"/>Have you ever lived with a Dog before?
 		<br>
 		<select id="multiSelect" multiple>
 			<option>1</option>
