--- a/main.html
+++ b/main.html
@@ -7,25 +7,24 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
 	<form>
 		<input type="text" id="name" placeholder="Name"/>
 		<br>
 		<input type="text" id="phone" placeholder="Phone Number"/>
 		<br>
 		<input type="text" id="address" placeholder="Address"/>
-      <br>
-		<input type="checkbox" id="chechbox" value="Have you ever lived with a Dog before?"/>Have you ever lived with a Dog before?
 		<br>
+		<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?"/>Have you ever lived with a Dog before?
+	<br>
 		<select id="multiSelect" multiple>
-			<option>1</option>
-			<option>2</option>
-			<option>3</option>
-			<option>4</option>
+			<option>pitbull</option>
+			<option>pug</option>
+			<option>german</option>
 		</select>
 		<br>
-		<input type="submit" id="submit" value="Submit">				
+		<input type="submit" id="submit" value="Submit"/>
 	</form>
+	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
 
